# wsupdate

./: README.md  pyproject.toml
src/wsupdate/: __init__.py
