[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsupdate"
description = "A comprehensive and extendable Linux system updater, written in Python."
version = "23.12.1"
authors = [
    { name="Jahin Z.", email="jahinzee@outlook.com" }
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 6 - Mature",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
wsupdate = "wsupdate:main"

[project.urls]
Homepage = "https://github.com/jahinzee/wsupdate"
Repository = "https://github.com/jahinzee/wsupdate.git"
Issues = "https://github.com/jahinzee/wsupdate/issues"